minor css fix with top on iphone front camera

--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,7 @@
   html,
   body,
   #root {
-    height: 100%;
+    min-height: 100%;
   }
 
   body {
@@ -121,6 +121,11 @@
     font-family: "DM Sans", system-ui, -apple-system, Segoe UI, Roboto,
       "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
     overflow-x: hidden;
+
+    padding-top: env(safe-area-inset-top, 0px);
+    padding-right: env(safe-area-inset-right, 0px);
+    padding-bottom: env(safe-area-inset-bottom, 0px);
+    padding-left: env(safe-area-inset-left, 0px);
   }
 
   *, ::before, ::after {
